[gd_scene load_steps=15 format=2]

[ext_resource path="res://levels/backgrounds/rooftop.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/BossFight-Ox_Anna.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI_PlayerInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/backgrounds/rooftop-stars.jpg" type="Texture" id=4]
[ext_resource path="res://fonts/Hey August.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=10]
size = 120
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 912, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.3094, 370.085 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Words:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer2/Countdown:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HBoxContainer2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 240 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Stars:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "end match fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade in night"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade to round"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_scene"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "intro"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Words:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "round" ],
"method": "announcer_speak"
}, {
"args": [ "FIGHT!" ],
"method": "format_text_for_label"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BossFight-Ox_Anna" type="Node2D"]
script = ExtResource( 2 )

[node name="Stars" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 140.0
margin_right = 1024.0
margin_bottom = 300.0
grow_horizontal = 2
alignment = 1

[node name="Words" type="RichTextLabel" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 312.0
margin_right = 712.0
margin_bottom = 160.0
rect_min_size = Vector2( 400, 0 )
rect_clip_content = false
theme = SubResource( 5 )
meta_underlined = false
text = "ROUND 1"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 400.0
grow_horizontal = 2
alignment = 1

[node name="Countdown" type="RichTextLabel" parent="HBoxContainer2"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 462.0
margin_top = 100.0
margin_right = 562.0
margin_bottom = 260.0
rect_min_size = Vector2( 100, 0 )
rect_clip_content = false
theme = SubResource( 5 )
meta_underlined = false
text = "10"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="CountdownTimer" type="Timer" parent="HBoxContainer2"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( -48, 576 )
collision_layer = 2147483648
collision_mask = 17
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 560, 7 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2( -8, 472 )
collision_layer = 2147483648
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 9.30939, -178.085 )
shape = SubResource( 2 )

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2( 1016, 288 )
collision_layer = 2147483648
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 9.30939, 8.23621 )
shape = SubResource( 2 )

[node name="Announcer" type="AudioStreamPlayer" parent="."]

[node name="UI" parent="." instance=ExtResource( 3 )]
margin_left = 19.0
margin_top = 11.0
margin_right = 1587.0
margin_bottom = 109.0
rect_scale = Vector2( 0.63, 0.63 )

[node name="EndFightTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
"anims/end match fade" = SubResource( 8 )
"anims/fade in night" = SubResource( 9 )
"anims/fade to round" = SubResource( 7 )
anims/intro = SubResource( 3 )

[node name="Delay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PauseDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 421.0
margin_top = 240.0
margin_right = 605.0
margin_bottom = 312.0
window_title = "Game paused"

[connection signal="timeout" from="HBoxContainer2/CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="finished" from="Announcer" to="." method="_on_Announcer_finished"]
[connection signal="timeout" from="EndFightTimer" to="." method="_on_EndFightTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
